--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/Maps/FantasyOpenWorld.FantasyOpenWorld
 EditorStartupMap=/Game/Maps/FantasyOpenWorld.FantasyOpenWorld
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
