--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -53,6 +53,7 @@ r.VirtualTextures=True
 r.Lumen.HardwareRayTracing=True
 r.Lumen.TranslucencyReflections.FrontLayer.EnableForProject=True
 r.RayTracing.Shadows=True
+r.AntiAliasingMethod=4
 
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
