Adjustments adjustments and adjustments :D

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -138,3 +138,9 @@ ManualIPAddress=
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
+[/Script/MovieRenderPipelineCore.MoviePipelineCommandLineEncoderSettings]
+ExecutablePath=D:\ffmpeg-master-latest-win64-gpl\bin\ffmpeg.exe
+VideoCodec=libx264
+AudioCodec=AAC
+OutputFileExtension=mp4
+
