reflections and soulercosters

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/FantasyOpenWorld.FantasyOpenWorld
-EditorStartupMap=/Game/Maps/FantasyOpenWorld.FantasyOpenWorld
+GameDefaultMap=/Game/Maps/VFX_Scene.VFX_Scene
+EditorStartupMap=/Game/Maps/VFX_Scene.VFX_Scene
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
@@ -41,7 +41,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/Engine.RendererSettings]
 r.GenerateMeshDistanceFields=True
-r.DynamicGlobalIlluminationMethod=2
+r.DynamicGlobalIlluminationMethod=1
 r.ReflectionMethod=1
 r.SkinCache.CompileShaders=True
 r.RayTracing=True
