Prepped environment, made some shaders

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -55,6 +55,7 @@ r.Lumen.HardwareRayTracing=True
 r.Lumen.TranslucencyReflections.FrontLayer.EnableForProject=True
 r.RayTracing.Shadows=True
 r.AntiAliasingMethod=4
+r.DefaultFeature.AutoExposure=False
 
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
