--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/LeeKisong_Course001.LeeKisong_Course001
-EditorStartupMap=/Game/Maps/LeeKisong_Course001.LeeKisong_Course001
+GameDefaultMap=/Game/LeeKisong/Level/Ex_SpriteExp_01.Ex_SpriteExp_01
+EditorStartupMap=/Game/LeeKisong/Level/Ex_SpriteExp_01.Ex_SpriteExp_01
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
