--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/LeeKisong/Level/Ex_SpriteExp_01.Ex_SpriteExp_01
-EditorStartupMap=/Game/LeeKisong/Level/Ex_SpriteExp_01.Ex_SpriteExp_01
+GameDefaultMap=/Game/LeeKisong/Level/Ex_02_ProjectileExp.Ex_02_ProjectileExp
+EditorStartupMap=/Game/LeeKisong/Level/Ex_02_ProjectileExp.Ex_02_ProjectileExp
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
