--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/LeeKisong/Level/Ex_02_ProjectileExp.Ex_02_ProjectileExp
-EditorStartupMap=/Game/LeeKisong/Level/Ex_02_ProjectileExp.Ex_02_ProjectileExp
+GameDefaultMap=/Game/LeeKisong/Level/Ex_03_SchockWaveExp.Ex_03_SchockWaveExp
+EditorStartupMap=/Game/LeeKisong/Level/Ex_03_SchockWaveExp.Ex_03_SchockWaveExp
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
