--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/LeeKisong/Level/Ex_03_SchockWaveExp.Ex_03_SchockWaveExp
-EditorStartupMap=/Game/LeeKisong/Level/Ex_03_SchockWaveExp.Ex_03_SchockWaveExp
+GameDefaultMap=/Game/LeeKisong/Level/Ex_04_UltimateExp.Ex_04_UltimateExp
+EditorStartupMap=/Game/LeeKisong/Level/Ex_04_UltimateExp.Ex_04_UltimateExp
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
