Swordtrail first swing 001
impact decal missing

--- a/Studio.uproject
+++ b/Studio.uproject
@@ -37,6 +37,13 @@
 		{
 			"Name": "MovieRenderPipeline",
 			"Enabled": true
+		},
+		{
+			"Name": "TextureGraph",
+			"Enabled": true,
+			"SupportedTargetPlatforms": [
+				"Win64"
+			]
 		}
 	]
 }
