--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -56,6 +56,7 @@ r.Lumen.TranslucencyReflections.FrontLayer.EnableForProject=True
 r.RayTracing.Shadows=True
 r.AntiAliasingMethod=4
 r.DefaultFeature.AutoExposure=False
+r.CustomDepth=3
 
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
